tests/valid/18_retorna_en_si.patito
programa retornaEnSi;
vars r : entero;

entero positivo(x : entero) {
    {
        si (x > 0) {
            retorna 1;
        } ;
        retorna 0;
    }
} ;

inicio
{
    r = 0;
}
fin
