tests/invalid/11_retorna_sin_expr.patito
programa retornaSinExpr;

entero malo(x : entero) {
    {
        retorna ;
    }
} ;

inicio
{
}
fin
